--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.11"
 requests = "^2.32.3"
 pytest = "^8.3.3"
 pytest-cov = "^5.0.0"
+python-dotenv = "^1.0.1"
 
 
 [tool.poetry.group.lint.dependencies]
